<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/follow_below_steps_to_anlyze_your_chat"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/stepsToUseThisApp"
            android:padding="16dp"
            android:textColor="@color/white"
            android:background="@drawable/text_view_background"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/aboutApp"
            android:padding="16dp"
            android:textColor="@color/white"
            android:background="@drawable/text_view_background"
            android:textSize="15sp" />

    </LinearLayout>

</ScrollView>